// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Alert component should render the "error" variant correctly 1`] = `
<div
  className="makeStyles-item-1 makeStyles-error-3"
>
  <ErrorOutlinedIcon />
  <span>
    Test Error Content
  </span>
</div>
`;

exports[`the Alert component should render the "info" variant correctly 1`] = `
<div
  className="makeStyles-item-1 makeStyles-info-2"
>
  <InfoOutlinedIcon />
  <span>
    Test Info Content
  </span>
</div>
`;
